<resources>
    <string name="app_name">AnimeKu</string>
    <string name="anime_title">Title Anime</string>
    <string name="anime_rating">Rating 8.0</string>
    <string name="anime_status">Ongoing</string>
    <string name="anime_release">13 Oktober 2023</string>
    <string name="text_genre">Genre</string>
    <string name="text_episode">Episode</string>
    <string name="text_rating">Rating</string>
    <string name="text_status">Status</string>
    <string name="text_release_date">Release Date</string>
    <string name="text_studios">Studios</string>
    <string name="text_synopsis">Synopsis</string>
    <string name="poster_anime">Poster Anime</string>
    <string name="text_my_name">Surya Rama</string>
    <string name="text_my_email">barianbarbar99@gmail.com</string>
    <string name="profile">Profile</string>
    <string name="icon_back">Icon Back</string>
    <string name="detail_anime">Detail Anime</string>
    <string name="about">About</string>
    <string name="share_detail_anime">Share Detail Anime</string>
    <string-array name="data_anime_title">
        <item>Sword Art Online</item>
        <item>Spy x Family</item>
        <item>Kimetsu no Yaiba</item>
        <item>Jujutsu Kaisen</item>
        <item>Attack on Titan</item>
        <item>Sousou no Frieren</item>
        <item>Death Note</item>
        <item>Steins;Gate</item>
        <item>Mirai Nikki</item>
        <item>Another</item>
        <item>Kimi Zero</item>
        <item>Tonikaku Kawaii</item>
    </string-array>
    <string-array name="data_anime_poster">
        <item>https://cdn.myanimelist.net/images/anime/11/39717.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/1441/122795.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/1286/99889.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/1171/109222.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/10/47347.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/1015/138006.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/1079/138100.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/1935/127974.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/13/33465.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/4/75509.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/1594/139137.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/1613/108722.jpg</item>
    </string-array>
    <string-array name="data_anime_status">
        <item>Completed</item>
        <item>Completed</item>
        <item>Completed</item>
        <item>Completed</item>
        <item>Completed</item>
        <item>Ongoing</item>
        <item>Completed</item>
        <item>Completed</item>
        <item>Completed</item>
        <item>Completed</item>
        <item>Ongoing</item>
        <item>Completed</item>
    </string-array>
    <string-array name="data_anime_release">
        <item>8 Juli 2012</item>
        <item>9 April 2022</item>
        <item>6 April 2019</item>
        <item>3 Oktober 2020</item>
        <item>7 April 2013</item>
        <item>29 September 2023</item>
        <item>4 Oktober 2006</item>
        <item>6 April 2011</item>
        <item>9 Oktober 2011</item>
        <item>10 Januari 2012</item>
        <item>6 Oktober 2023</item>
        <item>3 Oktober 2020</item>
    </string-array>
    <string-array name="data_anime_rating">
        <item>7.20</item>
        <item>8.58</item>
        <item>8.49</item>
        <item>8.63</item>
        <item>8.54</item>
        <item>8.94</item>
        <item>8.62</item>
        <item>9.07</item>
        <item>7.41</item>
        <item>7.48</item>
        <item>6.74</item>
        <item>7.88</item>
    </string-array>
    <string-array name="data_anime_genres">
        <item>Action, Adventure, Fantasy, Romance</item>
        <item>Action, Comedy</item>
        <item>Action, Historical, Fantasy</item>
        <item>Action, School, Fantasy</item>
        <item>Action, Military, Survival, Drama</item>
        <item>Adventure, Drama, Fantasy</item>
        <item>Supernatural, Detective, Psychological</item>
        <item>Drama, Sci-Fi, Psychological, Time Travel</item>
        <item>Action, Supernatural, High Stakes Game, Psychological, Survival</item>
        <item> Horror, Mystery, Supernatural, School</item>
        <item>Romance, School</item>
        <item>Comedy, Romance, Shounen</item>
    </string-array>
    <string-array name="data_anime_episode">
        <item>25</item>
        <item>12</item>
        <item>26</item>
        <item>24</item>
        <item>25</item>
        <item>28</item>
        <item>37</item>
        <item>24</item>
        <item>26</item>
        <item>12</item>
        <item>12</item>
        <item>12</item>
    </string-array>
    <string-array name="data_anime_studios">
        <item> A-1 Pictures</item>
        <item> Wit Studio, CloverWorks</item>
        <item>Ufotable</item>
        <item>MAPPA</item>
        <item>Wit Studio</item>
        <item>Madhouse</item>
        <item>Madhouse</item>
        <item>White Fox</item>
        <item>Asread</item>
        <item>P.A. Works</item>
        <item>ENGI</item>
        <item>Seven Arcs</item>
    </string-array>
</resources>