<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey"
    >

    <TextView
        android:id="@+id/tv_content_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:textColor="@color/navyDark"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/tv_text_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_genre"
        android:textColor="@color/navyDark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_content_title" />

    <TextView
        android:id="@+id/tv_content_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_text_genre"
        app:layout_constraintStart_toEndOf="@+id/tv_text_genre"
        app:layout_constraintTop_toTopOf="@+id/tv_text_genre"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@tools:sample/lorem"
        android:textColor="@color/navyDark"
        />

    <TextView
        android:id="@+id/tv_text_episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_episode"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/navyDark"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_genre" />

    <TextView
        android:id="@+id/tv_content_episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_text_episode"
        app:layout_constraintStart_toEndOf="@+id/tv_text_episode"
        app:layout_constraintTop_toTopOf="@+id/tv_text_episode"
        android:textColor="@color/navyDark"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/tv_text_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_rating"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/navyDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_episode" />

    <TextView
        android:id="@+id/tv_content_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_text_rating"
        app:layout_constraintStart_toEndOf="@+id/tv_text_rating"
        app:layout_constraintTop_toTopOf="@+id/tv_text_rating"
        app:layout_constraintVertical_bias="0.0"
        android:textColor="@color/navyDark"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/tv_text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_status"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/navyDark"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_rating" />

    <TextView
        android:id="@+id/tv_content_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_text_status"
        app:layout_constraintStart_toEndOf="@+id/tv_text_status"
        app:layout_constraintTop_toTopOf="@+id/tv_text_status"
        android:textColor="@color/navyDark"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/tv_text_studio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_studios"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/navyDark"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_status" />

    <TextView
        android:id="@+id/tv_content_studio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_text_studio"
        app:layout_constraintStart_toEndOf="@+id/tv_text_studio"
        app:layout_constraintTop_toTopOf="@+id/tv_text_studio"
        android:textColor="@color/navyDark"
        tools:text="@tools:sample/lorem" />

    <TextView
        android:id="@+id/tv_text_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_release_date"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/navyDark"
        app:layout_constraintTop_toBottomOf="@+id/tv_text_studio" />

    <TextView
        android:id="@+id/tv_content_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_text_release"
        app:layout_constraintStart_toEndOf="@+id/tv_text_release"
        app:layout_constraintTop_toTopOf="@+id/tv_text_release"
        android:textColor="@color/navyDark"
        tools:text="@tools:sample/lorem" />

</androidx.constraintlayout.widget.ConstraintLayout>