<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailAnimeActivity"
    android:background="@color/grey"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="1200dp"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"

            >
            <ImageView
                android:id="@+id/icon_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_40"
                android:contentDescription="@string/icon_back" />
            <TextView
                android:layout_marginStart="20dp"
                android:id="@+id/action_bar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:text="@string/detail_anime"/>
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/bg_content"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="64dp"
            android:background="@color/navy"
            android:contentDescription="@string/poster_anime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/content_poster"
            android:layout_width="180dp"
            android:layout_height="220dp"
            android:layout_marginTop="60dp"
            android:background="@color/white"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="@+id/bg_content"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/bg_content"
            app:layout_constraintTop_toTopOf="@+id/bg_content"
            app:shapeAppearanceOverlay="@style/Rounded"
            tools:src="@tools:sample/avatars" />

        <include
            android:id="@+id/include_detail_anime"
            layout="@layout/details_anime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/content_poster" />

        <include
            android:id="@+id/include_synopsis"
            layout="@layout/synopsis_anime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_detail_anime" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>